# Sprintern

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  alembic.ini  compose.production.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  vitest.config.ts
backend/: .dockerignore  .env.example  Dockerfile.api  compose.production.yml  docker-compose.yml  pyproject.toml
backend/api/: database.py  errors.py  health.py  launch.py  locations.py  main.py  observability.py  rate_limiting.py  settings.py
backend/api/auth/: __init__.py  admin.py  admin_access.py  jwt.py
backend/api/ingestion/: __init__.py  contracts.py  factory.py  http.py  normalization.py  persistence.py  service.py
backend/api/jobs/: __init__.py  queue.py
backend/api/matching/: classifier.py  matcher.py  service.py
backend/api/models/: __init__.py  (+7 more)
backend/migrations/: env.py
backend/scripts/: export_openapi.py  render_notification_previews.py  send_notification_smoke_test.py
backend/tests/: conftest.py  test_account_email_safety.py  test_api.py  test_api_contract.py  test_applications.py  test_auth.py  test_background_jobs.py  test_database_rls.py  test_discovery.py  test_health.py  test_ingestion.py  test_launch_hardening.py  test_lever_adapter.py  test_matching.py  test_mvp_workflow.py  test_notification_controls.py  test_notifications.py  test_observability.py  test_protection.py  test_remoteok_adapter.py  test_scheduler.py  test_settings.py  test_source_admin.py
(+267 files in other folders)
