[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprintern-api"
version = "0.1.0"
description = "FastAPI backend for Sprintern"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "apscheduler>=3.11,<4",
  "fastapi==0.139.2",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyjwt[crypto]>=2.10,<3",
  "redis>=5.2,<7",
  "sentry-sdk[fastapi]>=2.42,<3",
  "sqlalchemy>=2.0,<3",
  "starlette==1.3.1",
  "tenacity>=9.1,<10",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"
